seonaut/ingressroute-stremify.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stremify.${dns_domain}
  namespace: stremify
spec:
  routes:
    - match: Host(`stremify.${dns_domain}`)
      kind: Rule
      services:
        - name: stremify
          kind: Service
          port: 3000
      middlewares:  
        - name: chain-public-stremio-addon
          namespace: traefik
